--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -123,12 +123,14 @@
             inset: 0;
             background-color: #000c;
             opacity: 0;
+            pointer-events: none;
             transition: opacity 0.5s;
         }
         
         .dropdown--open~.background
         {
             opacity: 1;
+            pointer-events: all;
         }
     }
 
